--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <script>
+  const pass = "panchi";
+  const code = [];
+    
+  function save(e){
+    code.push(e.key);
+    code.splice(-pass.length - 1, code.length - pass.length);
+    if (code.join('').includes(pass)){
+      cornify_add();
+    };
+  };
+
+  window.addEventListener("keydown", save);
 </script>
 </body>
 </html>
